--- a/details.css
+++ b/details.css
@@ -1,5 +1,3 @@
-/* main section */
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
 
 *,
 *:before,
@@ -102,7 +100,7 @@ div#columns:hover figure:not(:hover) {
 	transition : all 0.3s ease-out;
 }
 .navigation-wrap{
-	
+
 	width: 100%;
 	top: 0;
 	left: 0;
@@ -168,7 +166,7 @@ div#columns:hover figure:not(:hover) {
     transition: all 200ms linear;
 }
 .nav-item:hover .nav-link{
-	color: #8167a9 ;
+	color: #2E2727;
 }
 .nav-item.active .nav-link{
 	color: #777 ;
@@ -185,7 +183,7 @@ div#columns:hover figure:not(:hover) {
 	width: 100%;
 	height: 2px;
 	content: '';
-	background-color: #8167a9;
+	background-color: #FFBB2E;
 	opacity: 0;
     transition: all 200ms linear;
 }
