--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
-/* main section */
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
+@import url('http://fonts.googleapis.com/earlyaccess/droidarabickufi.css');
+.droid-arabic-kufi {
+  font-family: 'Droid Arabic Kufi', serif;
+}
 
 *,
 *:before,
@@ -9,7 +11,7 @@
 
 body{
   font-family: 'Poppins', sans-serif;
-font-size: 16px;
+font-size: 20px;
 line-height: 24px;
 font-weight: 400;
 color: #212112;
@@ -20,11 +22,8 @@ background-size: 7%;
 background-color: #fff;
 overflow-x: hidden;
   transition: all 200ms linear;
+
 }
-
-
-/*test*/
-
 
 .start-header {
 	opacity: 1;
@@ -46,7 +45,7 @@ overflow-x: hidden;
 	transition : all 0.3s ease-out;
 }
 .navigation-wrap{
-	position: fixed;
+
 	width: 100%;
 	top: 0;
 	left: 0;
@@ -112,10 +111,10 @@ overflow-x: hidden;
     transition: all 200ms linear;
 }
 .nav-item:hover .nav-link{
-	color: #8167a9 ;
+	color: #2E2727 ;
 }
 .nav-item.active .nav-link{
-	color: #777 ;
+	color: #FFBB2E ;
 }
 .nav-link {
 	position: relative;
@@ -129,7 +128,7 @@ overflow-x: hidden;
 	width: 100%;
 	height: 2px;
 	content: '';
-	background-color: #8167a9;
+	background-color: #FFBB2E;
 	opacity: 0;
     transition: all 200ms linear;
 }
@@ -145,17 +144,33 @@ overflow-x: hidden;
     transition: all 200ms linear;
 }
 
-/* #Primary style
-================================================== */
+/* Assuming .navbar is the parent container */
+.container {
+    display: flex;
+    justify-content: center; /* Center the content horizontally */
+
+  }
+  /* Other styles for hero section */
+
 
 .bg-light {
 	background-color: #fff ;
     transition: all 200ms linear;
 }
 .section {
+
     position: relative;
 	width: 100%;
-	display: block;
+
+
+}
+.hero {
+    background-image: url('/img/hero.jpeg'); /* Replace with your image URL */
+    background-size: cover;
+    position: relative;
+	width: 100%;
+    height: 100vh;
+
 }
 .full-height {
     height: 100vh;
@@ -171,17 +186,22 @@ overflow-x: hidden;
   margin-top: 40px;
 	transform: translateY(-50%);
 	z-index: 20;
+
+
 }
-h1{
-	font-size: 48px;
-	line-height: 1.2;
-	font-weight: 700;
-	color: #212112;
-	text-align: center;
-}
+
 p{
 	text-align: center;
-	margin: 0;
+    margin-bottom: 40px;
+	padding-top: 10px;
+	opacity: 1;
+	transform: translate(0);
+    transition: all 300ms linear;
+    transition-delay: 1700ms;
+}
+.moto{
+	text-align: center;
+
 	padding-top: 10px;
 	opacity: 1;
 	transform: translate(0);
@@ -193,223 +213,46 @@ body.hero-anime p{
 	transform: translateY(40px);
     transition-delay: 1700ms;
 }
-h1 span{
-	display: inline-block;
-    transition: all 300ms linear;
-	opacity: 1;
-	transform: translate(0);
+/*hero title*/
+#hero {
+    margin-top: 40px;
+    background-image: repeating-linear-gradient(45deg, #C0C0C0 25%, transparent 25%, transparent 75%, #C0C0C0 75%, #C0C0C0), repeating-linear-gradient(45deg, #C0C0C0 25%, #FFFFFF 25%, #FFFFFF 75%, #C0C0C0 75%, #C0C0C0);
 }
-body.hero-anime h1 span:nth-child(1){
-	opacity: 0;
-	transform: translateY(-20px);
-}
-body.hero-anime h1 span:nth-child(2){
-	opacity: 0;
-	transform: translateY(-30px);
-}
-body.hero-anime h1 span:nth-child(3){
-	opacity: 0;
-	transform: translateY(-50px);
-}
-body.hero-anime h1 span:nth-child(4){
-	opacity: 0;
-	transform: translateY(-10px);
-}
-body.hero-anime h1 span:nth-child(5){
-	opacity: 0;
-	transform: translateY(-50px);
-}
-body.hero-anime h1 span:nth-child(6){
-	opacity: 0;
-	transform: translateY(-20px);
-}
-body.hero-anime h1 span:nth-child(7){
-	opacity: 0;
-	transform: translateY(-40px);
-}
-body.hero-anime h1 span:nth-child(8){
-	opacity: 0;
-	transform: translateY(-10px);
-}
-body.hero-anime h1 span:nth-child(9){
-	opacity: 0;
-	transform: translateY(-30px);
-}
-body.hero-anime h1 span:nth-child(10){
-	opacity: 0;
-	transform: translateY(-20px);
-}
-h1 span:nth-child(1){
-    transition-delay: 1000ms;
-}
-h1 span:nth-child(2){
-    transition-delay: 700ms;
-}
-h1 span:nth-child(3){
-    transition-delay: 900ms;
-}
-h1 span:nth-child(4){
-    transition-delay: 800ms;
-}
-h1 span:nth-child(5){
-    transition-delay: 1000ms;
-}
-h1 span:nth-child(6){
-    transition-delay: 700ms;
-}
-h1 span:nth-child(7){
-    transition-delay: 900ms;
-}
-h1 span:nth-child(8){
-    transition-delay: 800ms;
-}
-h1 span:nth-child(9){
-    transition-delay: 600ms;
-}
-h1 span:nth-child(10){
-    transition-delay: 700ms;
+h1{
+
+    margin-top: 20px;
+    color: #212112;
+	line-height: 1.2;
+	font-weight: 700;
+    top: 130px;
+    text-align: center;
+    font-family: 'Adobe Arabic', serif;
+    font-size: 48px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
-body.hero-anime h1 span:nth-child(11){
-	opacity: 0;
-	transform: translateY(30px);
+h2{
+  text-align: center;
+  color: #474200;
+  font-family: 'Adobe Arabic', serif;
+  font-size: 48px;
+  line-height: 1.2;
+	font-weight: 700;
 }
-body.hero-anime h1 span:nth-child(12){
-	opacity: 0;
-	transform: translateY(50px);
+.join{
+  text-align: center;
+  color: #FFE151;
+  font-family: 'Adobe Arabic', serif;
+  font-size: 50px;
+  line-height: 1.2;
+	font-weight: 800;
 }
-body.hero-anime h1 span:nth-child(13){
-	opacity: 0;
-	transform: translateY(20px);
-}
-body.hero-anime h1 span:nth-child(14){
-	opacity: 0;
-	transform: translateY(30px);
-}
-body.hero-anime h1 span:nth-child(15){
-	opacity: 0;
-	transform: translateY(50px);
-}
-h1 span:nth-child(11){
-    transition-delay: 1300ms;
-}
-h1 span:nth-child(12){
-    transition-delay: 1500ms;
-}
-h1 span:nth-child(13){
-    transition-delay: 1400ms;
-}
-h1 span:nth-child(14){
-    transition-delay: 1200ms;
-}
-h1 span:nth-child(15){
-    transition-delay: 1450ms;
-}
-body.hero-anime #switch{
-	opacity: 0;
-	transform: translateY(40px);
-    transition-delay: 1900ms;
-}
+#section1{
+  margin-top: 40px;
+  background-image: repeating-linear-gradient(45deg, #C0C0C0 25%, transparent 25%, transparent 75%, #C0C0C0 75%, #C0C0C0), repeating-linear-gradient(45deg, #C0C0C0 25%, #FFFFFF 25%, #FFFFFF 75%, #C0C0C0 75%, #C0C0C0);
 
-.nav-item .dropdown-menu {
-    transform: translate3d(0, 10px, 0);
-    visibility: hidden;
-    opacity: 0;
-	max-height: 0;
-    display: block;
-	padding: 0;
-	margin: 0;
-    transition: all 200ms linear;
 }
-.nav-item.show .dropdown-menu {
-    opacity: 1;
-    visibility: visible;
-	max-height: 999px;
-    transform: translate3d(0, 0px, 0);
-}
-.dropdown-menu {
-	padding: 10px!important;
-	margin: 0;
-	font-size: 13px;
-	letter-spacing: 1px;
-	color: #212121;
-	background-color: #fcfaff;
-	border: none;
-	border-radius: 3px;
-	box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
-    transition: all 200ms linear;
-}
-.dropdown-toggle::after {
-	display: none;
-}
-
-.dropdown-item {
-	padding: 3px 15px;
-	color: #212121;
-	border-radius: 2px;
-    transition: all 200ms linear;
-}
-.dropdown-item:hover,
-.dropdown-item:focus {
-	color: #fff;
-	background-color: rgba(129,103,169,.6);
-}
-
-body.dark{
-	color: #fff;
-	background-color: #1f2029;
-}
-body.dark .navbar-brand img{
-  filter: brightness(100%);
-}
-body.dark h1{
-	color: #fff;
-}
-body.dark h1 span{
-    transition-delay: 0ms !important;
-}
-body.dark p{
-	color: #fff;
-    transition-delay: 0ms !important;
-}
-body.dark .bg-light {
-	background-color: #14151a !important;
-}
-body.dark .start-header {
-	box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.15);
-}
-body.dark .start-header.scroll-on {
-	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
-}
-body.dark .nav-link{
-	color: #fff !important;
-}
-body.dark .nav-item.active .nav-link{
-	color: #999 !important;
-}
-body.dark .dropdown-menu {
-	color: #fff;
-	background-color: #1f2029;
-	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.25);
-}
-body.dark .dropdown-item {
-	color: #fff;
-}
-body.dark .navbar-light .navbar-toggler-icon {
-	border-bottom: 1px solid #fff;
-}
-body.dark .navbar-light .navbar-toggler-icon:after,
-body.dark .navbar-light .navbar-toggler-icon:before{
-	background-color: #fff;
-}
-body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-	border-color: transparent;
-}
-
-
-
-
-
 
 a {
     text-decoration: none; /* Remove underline */
@@ -460,111 +303,112 @@ a {
 }
 
 /*button end*/
+
 /*members*/
 .our-team {
-  padding: 30px 0 40px;
-  margin-bottom: 30px;
-  background-color: #f7f5ec;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-}
+    padding: 30px 0 40px;
+    margin-bottom: 30px;
+    background-color: #f7f5ec;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+  }
 
-.our-team .picture {
-  display: inline-block;
-  height: 130px;
-  width: 130px;
-  margin-bottom: 50px;
-  z-index: 1;
-  position: relative;
-}
+  .our-team .picture {
+    display: inline-block;
+    height: 130px;
+    width: 130px;
+    margin-bottom: 50px;
+    z-index: 1;
+    position: relative;
+  }
 
-.our-team .picture::before {
-  content: "";
-  width: 100%;
-  height: 0;
-  border-radius: 50%;
-  background-color: #1369ce;
-  position: absolute;
-  bottom: 135%;
-  right: 0;
-  left: 0;
-  opacity: 0.9;
-  transform: scale(3);
-  transition: all 0.3s linear 0s;
-}
+  .our-team .picture::before {
+    content: "";
+    width: 100%;
+    height: 0;
+    border-radius: 50%;
+    background-color: #810606;
+    position: absolute;
+    bottom: 135%;
+    right: 0;
+    left: 0;
+    opacity: 0.9;
+    transform: scale(3);
+    transition: all 0.3s linear 0s;
+  }
 
-.our-team:hover .picture::before {
-  height: 100%;
-}
+  .our-team:hover .picture::before {
+    height: 100%;
+  }
 
-.our-team .picture::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #1369ce;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
+  .our-team .picture::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #810606;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
 
-.our-team .picture img {
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
-  transform: scale(1);
-  transition: all 0.9s ease 0s;
-}
+  .our-team .picture img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    transform: scale(1);
+    transition: all 0.9s ease 0s;
+  }
 
-.our-team:hover .picture img {
-  box-shadow: 0 0 0 14px #f7f5ec;
-  transform: scale(0.7);
-}
+  .our-team:hover .picture img {
+    box-shadow: 0 0 0 14px #810606;
+    transform: scale(0.7);
+  }
 
-.our-team .title {
-  display: block;
-  font-size: 15px;
-  color: #4e5052;
-  text-transform: capitalize;
-}
+  .our-team .title {
+    display: block;
+    font-size: 15px;
+    color: #810606;
+    text-transform: capitalize;
+  }
 
-.our-team .social {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  background-color: #1369ce;
-  position: absolute;
-  bottom: -100px;
-  left: 0;
-  transition: all 0.5s ease 0s;
-}
+  .our-team .social {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: #810606;
+    position: absolute;
+    bottom: -100px;
+    left: 0;
+    transition: all 0.5s ease 0s;
+  }
 
-.our-team:hover .social {
-  bottom: 0;
-}
+  .our-team:hover .social {
+    bottom: 0;
+  }
 
-.our-team .social li {
-  display: inline-block;
-}
+  .our-team .social li {
+    display: inline-block;
+  }
 
-.our-team .social li a {
-  display: block;
-  padding: 10px;
-  font-size: 17px;
-  color: white;
-  transition: all 0.3s ease 0s;
-  text-decoration: none;
-}
+  .our-team .social li a {
+    display: block;
+    padding: 10px;
+    font-size: 17px;
+    color: white;
+    transition: all 0.3s ease 0s;
+    text-decoration: none;
+  }
 
-.our-team .social li a:hover {
-  color: #1369ce;
-  background-color: #f7f5ec;
-}
-/*sections*/
+  .our-team .social li a:hover {
+    color: black;
+    background-color: #f7f5ec;
+  }
+  /*sections*/
 
-#section {
+  #section {
 	min-height: 100vh;
 	display: flex;
 	align-items: center;
@@ -633,104 +477,18 @@ a {
   color: #FF0000; /* Facebook's brand color */
   transform: scale(1.1); /* Slightly increase the icon size */
 }
-/* Media query for smaller screens */
-
-
-@media screen and (min-width: 1400px) {
-  .header h1 {
-    font-size: 6rem;
-  }
-  .header h2 {
-    font-weight: normal;
-    font-size: 1.5rem;
-  }
-}
-@media (max-width: 1200px) {
-  .flashy-hi {
-    font-size: 2.5rem;
-    width: 450px;
-  }
-  .flashy-hi span {
-    font-size: 30px;
-    margin-left: 30px;
+.fa-brands.fa-tiktok {
+    font-size: 32px;
+    transition: color 0.3s, transform 0.3s;
   }
 
-  .message {
-    left: 220px;
+  .fa-brands.fa-tiktok:hover {
+    color: black; /* Facebook's brand color */
+    transform: scale(1.1); /* Slightly increase the icon size */
   }
-}
-@media (max-width: 992px) {
-  .flashy-hi {
-    font-size: 2rem;
-    width: 350px;
-  }
-  .flashy-hi span {
-    font-size: 25px;
-    margin-left: 25px;
-  }
-  .message {
-    left: 170px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .flashy-hi {
-    font-size: 1.5rem;
-    width: 250px;
-  }
-  .flashy-hi span {
-    font-size: 20px;
-    margin-left: 20px;
-  }
-  .message {
-    left: 110px;
-  }
-}
-@media screen and (min-width: 750px) {
-  .header h1 {
-    font-size: 3.75rem;
-  }
-  .header h2 {
-    font-weight: normal;
-    font-size: 1.125rem;
-    letter-spacing: 0.5em;
-  }
-}
-@media only screen and (max-width: 600px) {
-  .flash-start {
-    height: 100%;
-    width: 100%;
-    flex-direction: column;
-  }
-}
-@media only screen and (min-width: 600px) {
-  .flash-start {
-    height: 100vh;
-    width: 100vw;
-    flex-direction: row;
-  }
-}
-@media screen and (max-height: 450px) {
-  .sidebar {
-    padding-top: 15px;
-  }
-  .sidebar a {
-    font-size: 18px;
-  }
-}
-@media (max-width: 576px) {
-  .flashy-hi {
-    font-size: 1rem;
-    width: 150px;
-  }
-  .flashy-hi span {
-    font-size: 15px;
-    margin-left: 15px;
-  }
-  .message {
-    left: 70px;
-  }
-}
 
+
+/* responsive*/
 
 @media (max-width: 767px) {
 	h1{
@@ -749,43 +507,36 @@ a {
 		content: "";
 		border: none;
 		background-color: #000;
-		vertical-align: 0;
+
 	}
-	.dropdown-toggle::after {
-		position: absolute;
-		display: block;
-		top: 10px;
-		left: -23px;
-		width: 1px;
-		height: 11px;
-		content: "";
-		border: none;
-		background-color: #000;
-		vertical-align: 0;
-		transition: all 200ms linear;
-	}
-	.dropdown-toggle[aria-expanded="true"]::after{
-		transform: rotate(90deg);
-		opacity: 0;
-	}
-	.dropdown-menu {
-		padding: 0 !important;
-		background-color: transparent;
-		box-shadow: none;
-		transition: all 200ms linear;
-	}
-	.dropdown-toggle[aria-expanded="true"] + .dropdown-menu {
-		margin-top: 10px !important;
-		margin-bottom: 20px !important;
-	}
-	body.dark .nav-item::before {
-		background-color: #fff;
-	}
-	body.dark .dropdown-toggle::after {
-		background-color: #fff;
-	}
-	body.dark .dropdown-menu {
-		background-color: transparent;
-		box-shadow: none;
-	}
+
 }
+@media screen and (max-height: 450px) {
+    .sidebar {
+      padding-top: 15px;
+    }
+    .sidebar a {
+      font-size: 18px;
+    }
+  }
+
+  @media screen and (min-width: 750px) {
+    .header h1 {
+      font-size: 3.75rem;
+    }
+    .header h2 {
+      font-weight: normal;
+      font-size: 1.125rem;
+      letter-spacing: 0.5em;
+    }
+  }
+
+  @media screen and (min-width: 1400px) {
+    .header h1 {
+      font-size: 6rem;
+    }
+    .header h2 {
+      font-weight: normal;
+      font-size: 1.5rem;
+    }
+  }
