--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ overflow-x: hidden;
 }
 .navbar{
 	font-weight: 500;
-	font-size: 40px;
+	font-size: 30px;
 	padding-right: 20px;
 }
 .navbar-brand img{
@@ -110,7 +110,7 @@ overflow-x: hidden;
 .nav-link{
 	color: #212121 ;
 	font-weight: 500;
-	font-size: 40px;
+	font-size: 30px;
     transition: all 200ms linear;
 }
 .nav-item:hover .nav-link{
@@ -122,8 +122,10 @@ overflow-x: hidden;
 	color: #FFBB2E ;
 }
 .nav-link {
+	margin-right: 10px;
+	margin-left: 10px;
 	font-weight: 500;
-	font-size: 40px;
+	font-size: 30px;
 	position: relative;
 	padding: 5px ;
 	display: inline-block;
