--- a/details.css
+++ b/details.css
@@ -109,6 +109,8 @@ div#columns:hover figure:not(:hover) {
 	transition : all 0.3s ease-out;
 }
 .navbar{
+	
+	font-size: 20px;
 	padding-right: 20px;
 }
 .navbar-brand img{
@@ -163,15 +165,22 @@ div#columns:hover figure:not(:hover) {
 .nav-link{
 	color: #212121 ;
 	font-weight: 500;
+	font-size: 20px;
     transition: all 200ms linear;
 }
 .nav-item:hover .nav-link{
-	color: #2E2727;
+	color: #2E2727 ;
+	font-size: 20px;
+	font-weight: 500;
 }
 .nav-item.active .nav-link{
-	color: #777 ;
+	color: #FFBB2E ;
 }
 .nav-link {
+	margin-right: 10px;
+	margin-left: 10px;
+	font-weight: 500;
+	font-size: 20px;
 	position: relative;
 	padding: 5px ;
 	display: inline-block;
